# Machine-Learning

./: .gitignore  Cookies  LICENSE  Preferences  README.md  machineid  storage.json
Backups/: workspaces.json
Cache/: data_0  data_1  index
CachedData/61122f88f0bf01e2ac16bdb9e1bc4571755f5bd8/: AvailabilityData-a8b04c800ee33d1aefb952f21049e3b4.code  Base-4c5d4fe2dc4093c0d4b972baaa70c227.code  Channel-78ea03e096175cb51e830e69a7d5ba62.code  Config-3df194716243893ee19690857ce8e9ed.code  Console-a041d1d3c0f38f472806bf3f81efc71e.code  Constants-d25bf35b6174072b37f19541ae2da470.code  Context-79cc1e273d8be562bccefbc790e0bb0a.code  ContextTagKeys-de1b573e6d86120cdce6c2c1027f1f18.code  CorrelationContextManager-da8251227258593c29afd4a7f00c71ca.code  CorrelationIdManager-b3411a863ba8cd82f60b7d4dea180080.code  Data-99dfd48ddddc88cb1bb7546bacc3ba11.code  DataPoint-11dae0b3d503fd29a93edf433146f624.code  DataPointType-4a3d4fc898a6f4afe2e51df752da3199.code  Domain-c1ad967bce419bc3879f4dff2041abec.code  Envelope-a34d20dfc0ed14053f24de2ae4d2e3a8.code  EnvelopeFactory-8016ec24d32d1a88e956732c3fd47ad1.code  EventData-11d3cb4cdfb2eb81782800318969232a.code  ExceptionData-355dac0f775b6c0fb739ab669d511bd3.code  ExceptionDetails-e4910b78e7450e21c0dc8fc2431251e7.code  Exceptions-ce3515b131df2975e128a395ad483526.code  HttpDependencies-6f86248c9aaf2ead3e35a72bbdccef53.code  HttpDependencyParser-cce3b6e92fc71131deb2e576212b2a7d.code  HttpRequestParser-de9ae7dde7a38b9d900cfe5a1510fde3.code  HttpRequests-4eabf0ca5b07c20c8dcd71fe63806043.code  Logging-5770d5197b0cf4f7d5d57a495d74dae1.code  MessageData-d79b5ee6f7b7c080013fb57f08d7b553.code  MetricData-a515aa23153c17d851a485ab3ebfe918.code  NodeClient-c8b8720283e5366683778453de992d75.code  PageViewData-fea5450469e3a6a955bd9e6071cd3f00.code  Performance-0efcb0e268376fb12b1c41ec6e79bfdf.code  RemoteDependencyData-dc4d421bdc084be111d266be52f87626.code  RequestData-317d985ee189cdfa08ec23015efbb509.code  (+98 more)
CachedExtensions/: builtin  user
DataEncoder-DEV/: CMakeLists.txt  encoder.cpp  encoder.h
Face Detection/EclipseWS/face-collector/: .cproject  .gitignore  .project  CMakeLists.txt
Face Detection/EclipseWS/face-collector/src/: CameraManager.cpp  CameraManager.hpp  CommonHeaders.hpp  FileSystemManager.cpp  FileSystemManager.hpp  HighGuiHandler.cpp  HighGuiHandler.hpp  ImageManager.cpp  ImageManager.hpp  MainDelegate.cpp  MainDelegate.hpp  ViewManager.cpp  ViewManager.hpp  cvui.h  main.cpp
Face Detection/binder_test/binder_test/: CMakeLists.txt  CMakeLists.txt-backup  main.cpp
GPUCache/: data_0  data_1  index
LSTM/: Untitled.ipynb
Local Storage/: file__0.localstorage
MiniFlow/: #activation.py#  #main.py#  #new.py#  .gitignore  activation.py  activation.py~  add.py  add.py~  cost.py  cost.py~  helper_class.py  helper_class.py~  input.py  input.py~  linear.py  linear.py~  main.py  main.py~  main2.py~  main_test1.py  main_test2.py  main_test3.py  main_test4.py  network.py  network.py~  node.py  node.py~  test.py  trained_data.p  update.py
One_Layer/: minist_one_layer.pkl  network.py  network.py~  pickle_helper.py  prediction.py  prediction.py~
OpenCL_SelfStudy/: a.out  matrix_mul.cpp  vector_add.py  vector_add.py~
PoseEstimation/MyPose-DEV/: CMakeLists.txt  CameraManager.cpp  CameraManager.h  opencv.cpp
PoseEstimation/MyPose-DEV/OpenGL-Tutorials/: CMakeLists.txt  tutorial01.cpp  tutorial02.cpp  tutorial03.cpp
PoseEstimation/MyPose-DEV/include/: CameraManager.h  JointCoordinateManager.h  JsonFileManager.h  MainDelegate.h
PoseEstimation/MyPose-DEV/src/: CameraManager.cpp  JointCoordinateManager.cpp  JsonFileManager.cpp  MainDelegate.cpp
PyTorch/: 2_autograd_tutorial.ipynb  3_neural_networks_tutorial.ipynb  4_cifar10_tutorial.ipynb  5_finetuning_torchvision_models_tutorial.ipynb  6_neural_style_tutorial.ipynb  6_neural_style_tutorial.py  7_data_loading_tutorial.ipynb  nn_tutorial.ipynb  tutorial.py
PyTorch/FaceLandmarkDetector/: CMakeLists.txt  ImageTransform.cpp
PyTorch/FaceLandmarkDetector/backup/: CodeSnippet  DataLoader.cpp  DataLoader.h
PyTorch/FaceLandmarkDetector/include/: CustomDataLoader.h  DataLoader.h  FaceLandmarkDetector.h  FaceLandmarkNet.h  ImageDataLoader.h  ImageTansform.h  MainDelegate.h  Trainer+Inferrer.h
PyTorch/FaceLandmarkDetector/python-helper/: face_landmarks.csv  text2csv.py
PyTorch/FaceLandmarkDetector/src/: CustomDataLoader.cpp  DataLoader.cpp  FaceLandmarkDetector.cpp  FaceLandmarkNet.cpp  ImageDataLoader.cpp  MainDelegate.cpp  Trainer+Inferrer.cpp  main.cpp
PyTorch/FaceLandmarkViewer/: #CMakeLists.txt#  CMakeLists.txt
PyTorch/FaceLandmarkViewer/include/: CameraManager.h  DataWranglingHelper.h  DepthEstimator.h  FaceLandmarksDetector.h  FaceRecognizer.h  ImageTansform.h  MainDelegate.h  Trainer+Inferrer.h  drawLandmarks.hpp
PyTorch/FaceLandmarkViewer/src/: CameraManager.cpp  DepthEstimator.cpp  FaceLandmarkNet.cpp  FaceLandmarksDetector.cpp  FaceRecognizer.cpp  MainDelegate.cpp  Trainer+Inferrer.cpp  main.cpp
PyTorch/FaceRecognition/: CMakeLists.txt  FaceRecognizer.py  masterCSV_creator.py
PyTorch/FaceRecognition/include/: FaceLandmarkNet.h  FaceRecognizer.h  ImageTansform.h  MainDelegate.h
PyTorch/FaceRecognition/src/: FaceRecognizer.cpp  MainDelegate.cpp
Reinforcement-Learning/: grid_world.py  policy_gradient.py
Semantic_Segmentation/: Untitled.ipynb  helper.py~  semantic_segmentation.py  semantic_segmentation.py~
TensorFlow/: Practice_Batch.py  Practice_Batch_Training.py~  Practice_Different_Layers.py~  Practice_Gates_and_Activation.py  Practice_Gates_and_Activation.py~  Practice_Iris_Classification.py~  Practice_MultiLayer_NN.py~  Practice_One_Layer_NN.py  Practice_One_Layer_NN.py~  Practice_SIMPLE_CNN.py~  Practice_Stochastic_Training.py  Untitled.ipynb  font_learning.py  font_learning2.py  test.py
Transformer/: model.py
User/: settings.json
Word_Recognition/: #font_CNN_example.py#  Placeholders_Variables.py  Placeholders_Variables.py~  font_CNN.py  font_CNN.py~  font_CNN_example.py~  japanese_font_recognition.py  japanese_font_recognition.py~  mnist_CNN.py  mnist_CNN.py~
(+1187 files in other folders)
