CMAKE_MINIMUM_REQUIRED(VERSION 3.3)

PROJECT(BinderTest)

FIND_PACKAGE(PythonLibs 3.6 REQUIRED)
INCLUDE_DIRECTORIES( ${PYTHON_INCLUDE_DIRS} )

#FIND_PACKAGE(Boost COMPONENTS python REQUIRED)
FIND_PACKAGE(Boost REQUIRED)
INCLUDE_DIRECTORIES( ${Boost_INCLUDE_DIR} )

LINK_DIRECTORIES( /usr/local/Cellar/boost-python3/1.67.0/lib )
#ADD_LIBRARY(main SHARED main.cpp)

ADD_EXECUTABLE(main main.cpp)

TARGET_LINK_LIBRARIES( main ${Boost_LIBRARIES} ${PYTHON_LIBRARIES} )
